// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Fade correctly with custom props 1`] = `
.emotion-0 {
  background: red;
  opacity: 0.2;
  -webkit-transition: all 500ms ease-in-out;
  transition: all 500ms ease-in-out;
}

<div
  className="emotion-0"
>
  <h3>
     Content 
  </h3>
</div>
`;

exports[`renders Fade in correctly 1`] = `
.emotion-0 {
  opacity: 0;
  -webkit-transition: all 400ms ease-in-out;
  transition: all 400ms ease-in-out;
}

<div
  className="emotion-0"
>
  <h3>
     Content 
  </h3>
</div>
`;
